Make sure sidebar image has minimum width of 270px to avoid flickering when image is not ready.

--- a/client/a8c-for-agencies/components/a4a-themed-modal/style.scss
+++ b/client/a8c-for-agencies/components/a4a-themed-modal/style.scss
@@ -35,7 +35,7 @@
 }
 
 .a4a-themed-modal__sidebar-image {
-	width: 270px;
+	min-width: 270px;
 	height: auto;
 	display: none;
 
